<resources>
    <string name="app_name">Email</string>
    <string name="search_description">Current email messages</string>
    <string name="ok">OK</string>
    <string name="view">View</string>
    <string name="listen">Listen</string>
    <string name="attachments">Attachments</string>
    <string name="opening">Opening</string>
    <string name="saving">Saving</string>
    <string name="saved">Saved</string>
    <string name="canceling">Canceling</string>
    <string name="eml_viewer">EML viewer</string>
    <string name="loading_content">Loading...</string>
    <string name="empty_folder">No messages</string>
    <string name="get_more_label">Get more</string>
    <string name="list_view_type_title">Arranged by: %1$s</string>
    <string name="message_saved_as_draft_hint">Message saved as draft</string>
    <string name="loading_more_messages">Loading messages</string>
    <string name="loading_more_conversations">Loading conversations</string>
    <string name="loading_recipient">Loading %1$d recipient</string>
    <string name="loading_recipients">Loading %1$d recipients</string>
    <string name="read_message_activity">Message</string>
    <string name="menu_flag">Flag</string>
    <string name="display_images">Display images</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mark_read">Mark read</string>
    <string name="view_meeting">View meeting</string>
    <string name="get_html">Get HTML version</string>
    <string name="get_more">Get more</string>
    <string name="read_message_attachments">attachments</string>
    <string name="acct_fmt_label">%1$s account</string>
    <string name="view_attachments">View %1$d attachments</string>
    <string name="save_email">Save email</string>
    <string name="read_message_contextmenu_sharelink">Share link</string>
    <string name="read_message_contextmenu_share_phone">Share phone number</string>
    <string name="read_message_contextmenu_share_email">Share email address</string>
    <string name="read_message_contextmenu_copy">Copy</string>
    <string name="read_message_contextmenu_copy_email">Copy email address</string>
    <string name="read_message_contextmenu_copy_phone_number">Copy phone number</string>
    <string name="read_message_contextmenu_text">Send text message</string>
    <string name="read_message_contextmenu_copylink">Copy link</string>
    <string name="read_message_contextmenu_download_image">Save image</string>
    <string name="read_message_contextmenu_view_image">View image</string>
    <string name="read_message_contextmenu_dial_dot">Call</string>
    <string name="read_message_contextmenu_send_mail">Send email</string>
    <string name="read_message_contextmenu_map">Map</string>
    <string name="read_message_contextmenu_javascript">JavaScript</string>
    <string name="read_message_settings_dialog">Settings</string>
    <string name="read_message_cancel_dialog">Cancel</string>
    <string name="read_message_body_dowload_error">Unable to fetch message body from server</string>
    <string name="read_message_calendar_disabled_dialog_title">Calendar disabled</string>
    <string name="read_message_calendar_disabled_dialog_msg_fmt">You must enable your %1$s work calendar before this functionality is available</string>
    <string name="read_message_save_email_dialog_title">Save email</string>
    <string name="read_message_save_email_dialog_att_content">One or more attachments has not been downloaded. The message will be saved without these attachments.</string>
    <string name="read_message_save_email_dialog_pt_dld_content">This message has been partially downloaded. Only the downloaded portion will be saved.</string>
    <string name="read_message_save_email_working">An attachment is currently being saved. Please try saving again later.</string>
    <string name="move_title">Move \"%1$s\" to</string>
    <string name="move_title_no_subject">Move message to</string>
    <string name="reply_list_item">Reply</string>
    <string name="reply_all_list_item">Reply all</string>
    <string name="forward_list_item">Forward</string>
    <string name="menu_move">Move</string>
    <string name="empty_trash">Empty trash</string>
    <string name="no_acct_configured">Cannot find any email accounts configured on this device.</string>
    <string name="no_recipient_error">A valid recipient is required to send this email.</string>
    <string name="cc_label">Cc:</string>
    <string name="bcc_label">Bcc:</string>
    <string name="sub_label">Subject:</string>
    <string name="sent_label">Sent:</string>
    <string name="send_label">Send</string>
    <string name="save_to_drafts_label">Save as draft</string>
    <string name="discard_label">Discard</string>
    <string name="attach_files_menu">Attach files</string>
    <string name="send_menu">Send</string>
    <string name="discard_menu">Discard</string>
    <string name="add_cc_menu">Add CC</string>
    <string name="del_cc_menu">Remove CC</string>
    <string name="add_bcc_menu">Add BCC</string>
    <string name="del_bcc_menu">Remove BCC</string>
    <string name="from_menu">From</string>
    <string name="from_acct_menu">From account</string>
    <string name="font_label">Font</string>
    <string name="font_shrink_label">F</string>
    <string name="format_choose_smiley">Choose a smiley</string>
    <string name="format_choose_fontkind">Choose font</string>
    <string name="format_choose_textsize">Choose text size</string>
    <string name="format_choose_txtcolor">Choose text color</string>
    <string name="format_choose_bkcolor">Choose background color</string>
    <string name="msg_importance">Importance</string>
    <string name="msg_importance_high">High</string>
    <string name="msg_importance_normal">Normal</string>
    <string name="msg_importance_low">Low</string>
    <string name="header_org_msg">-----Original message-----</string>
    <string name="compose_prefs_sample">When you compose an email, the text will look like this. You can choose default font styles from above.</string>
    <string name="compose_def_signature">Connected by MOTOBLUR™</string>
    <string name="default_font_label">Email font</string>
    <string name="default_signature_label">Email signature</string>
    <string name="restore_label">Restore</string>
    <string name="compose_change_info_text">Changes will affect your %1$s email account.</string>
    <string name="done_label">Done</string>
    <string name="account_settings_mail_check_frequency_label">Fetch schedule</string>
    <string name="pref_email_settings_title">Email settings</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Status bar</string>
    <string name="pref_smart_forwarding">Smart forwarding</string>
    <string name="pref_smart_forwarding_summary">Allows server-side attachment forwarding for Corporate Sync accounts</string>
    <string name="pref_title_email_delivery">Email delivery</string>
    <string name="pref_summary_email_delivery">Control when your device synchronizes your Corporate Sync and email accounts</string>
    <string name="pref_title_data_push">Data push</string>
    <string name="pref_summary_data_push">If push is turned off or not available, the device will use the fetch schedule instead</string>
    <string name="pref_email_activesync">Email and Corporate Sync</string>
    <string name="pref_title_notification_vibrate">Vibrate</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="pref_title_default_email_account">Default email account</string>
    <string name="pref_compose_settings_label">Compose options</string>
    <string name="pref_title_multi_select">Multi-select always on</string>
    <string name="pref_title_list_view_settings">List view options</string>
    <string name="pref_summary_multi_select">Display checkboxes to select multiple messages</string>
    <string name="pref_adjustable_line_title">Message preview</string>
    <string name="pref_dialog_title_default_email_account">Default email account</string>
    <string name="pref_title_attachment_auto_download">Download over Wi-Fi</string>
    <string name="pref_summary_attachment_auto_download">Attachments for new messages will download in the background only when connected to Wi-Fi</string>
    <string name="pref_title_att_down_only_charging">Only when charging</string>
    <string name="pref_summary_att_down_only_charging">When charging, attachments will download in the background</string>
    <string name="pref_title_attachment_auto_download_settings">Attachment download</string>
    <string name="pref_summary_attachment_auto_download_settings_off">Attachment download over Wi-Fi is turned off</string>
    <string name="pref_header_email_accounts">Email accounts</string>
    <string name="account_settings_mail_check_frequency_dialog_label">Fetch schedule</string>
    <string name="pref_read_settings_label">Read options</string>
    <string name="pref_title_read_text_size">Set text size</string>
    <string name="account_settings_read_text_size_dialog_title">Text size</string>
    <string name="title_email_sync_over_wifi_only">Sync over Wi-Fi only</string>
    <string name="summary_email_sync_over_wifi_only">Lets you set your email accounts to only sync when you are logged in to a Wi-Fi network</string>
    <string name="title_email_no_email_accounts">No email accounts</string>
    <string name="oof_settings_label">Out of office</string>
    <string name="oof_settings_summary">Create and manage \"Out of office\" auto-reply messages</string>
    <string name="out_of_office">Out of office</string>
    <string name="out_of_office_summary">Send \"Out of office\" reply once to each sender</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_summary">No schedule set</string>
    <string name="inside_org">Inside my organization</string>
    <string name="inside_org_summary">Auto reply message to people in my organization:</string>
    <string name="outside_org">Outside my organization</string>
    <string name="outside_org_summary">Auto reply message to people outside your organization:</string>
    <string name="auto_reply_title">Auto reply</string>
    <string name="auto_reply_summary">Send auto reply to people outside my organization</string>
    <string name="reply_to">Reply to</string>
    <string name="reply_to_summary">Anyone outside my organization</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enable_schedule_title">Enable schedule</string>
    <string name="enable_schedule_summary">Allows you to set a start and end time to automatically turn out of office on and off</string>
    <string name="start_label">Start</string>
    <string name="end_label">End</string>
    <string name="pref_folder_sync_screen_label">Folder sync (%1$s)</string>
    <string name="pref_default_sync_amount_label">Default sync amount</string>
    <string name="pref_default_sync_amount_dialog_label">Default sync amount</string>
    <string name="pref_folder_sync_label">Folder sync</string>
    <string name="pref_folder_sync_synchronization_title">Synchronization</string>
    <string name="pref_folder_sync_folders_title">Folders</string>
    <string name="pref_folder_sync_prefs_label">%1$s</string>
    <string name="pref_folder_sync_prefs_dialog_label">%1$s Folder</string>
    <string name="pref_folder_sync_auto_sync_label">Auto sync in background</string>
    <string name="pref_folder_sync_manual_sync_label">Sync when opening folder</string>
    <string name="pref_folder_sync_amount_label">Sync amount</string>
    <string name="pref_title_suggestions">Display suggestions</string>
    <string name="pref_summary_suggestions">Show suggestions while addressing</string>
</resources>