<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@blur.res:layout/preference_title" android:title="@string/pref_title_attachment_auto_download_settings" />
    <CheckBoxPreference android:persistent="false" android:title="@string/pref_title_attachment_auto_download" android:key="com.motorola.blur.email.pref_attachment_auto_download" android:summary="@string/pref_summary_attachment_auto_download" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="false" android:title="@string/pref_title_att_down_only_charging" android:key="com.motorola.blur.email.pref_att_auto_down_only_charging" android:summary="@string/pref_summary_att_down_only_charging" android:defaultValue="true" />
    <PreferenceCategory android:persistent="false" android:title="@string/pref_header_email_accounts" android:key="email_accounts" />
</PreferenceScreen>