<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:background="@blur.res:color/msg_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:minHeight="?android:listPreferredItemHeight"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout style="@blur.res:style/Blur.TitleBar">
            <TextView android:id="@id/title" android:text="@string/out_of_office" style="@blur.res:style/Blur.TxtTitleBar" />
        </LinearLayout>
        <LinearLayout android:id="@android:attr/manageSpaceActivity" style="@style/OOFLinearLayout">
            <RelativeLayout style="@style/OOFRelativeLayout">
                <TextView android:id="@android:attr/allowClearUserData" android:text="@string/out_of_office" style="@style/OOFListItemTitle" />
                <TextView android:id="@android:attr/permission" android:text="@string/out_of_office_summary" android:layout_below="@android:attr/allowClearUserData" android:layout_alignLeft="@android:attr/allowClearUserData" style="@style/OOFListItemSummary" />
            </RelativeLayout>
            <CheckBox android:id="@android:attr/readPermission" style="@style/OOFCheckBox" />
        </LinearLayout>
        <View style="@style/OOFSeparator" />
        <LinearLayout android:id="@id/schedule" style="@style/OOFLinearLayout">
            <RelativeLayout android:layout_width="fill_parent" style="@style/OOFRelativeLayout">
                <TextView android:id="@android:attr/writePermission" android:text="@string/schedule" style="@style/OOFListItemTitle" />
                <TextView android:id="@android:attr/protectionLevel" android:text="@string/schedule_summary" android:layout_below="@android:attr/writePermission" android:layout_alignLeft="@android:attr/writePermission" style="@style/OOFListItemSummary" />
            </RelativeLayout>
            <ImageView android:layout_gravity="center_vertical" android:id="@android:attr/permissionGroup" android:background="@drawable/btn_circle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:src="@drawable/ic_btn_round_more" />
        </LinearLayout>
        <LinearLayout style="@blur.res:style/Blur.TitleBar">
            <TextView android:text="@string/inside_org" style="@blur.res:style/Blur.TxtTitleBar" />
        </LinearLayout>
        <LinearLayout android:gravity="left|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@android:attr/sharedUserId" android:layout_marginLeft="10.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="6.0dip" android:text="@string/inside_org_summary" style="@style/OOFListItemSummary" />
            <LinearLayout android:id="@id/insideOrg_msg_container" android:layout_weight="1.0" style="@style/OOFEditLinearLayout">
                <WebView android:id="@id/insideOrg_msg" android:focusable="true" android:scrollbars="none" android:fadingEdge="none" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:fillViewport="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@blur.res:style/Blur.TitleBar">
            <TextView android:id="@id/outside_org_title" android:text="@string/outside_org" style="@blur.res:style/Blur.TxtTitleBar" />
        </LinearLayout>
        <LinearLayout android:gravity="left|center" android:orientation="vertical" android:id="@id/outside_org" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/auto_reply" style="@style/OOFLinearLayout">
                <RelativeLayout style="@style/OOFRelativeLayout">
                    <TextView android:id="@android:attr/hasCode" android:text="@string/auto_reply_title" style="@style/OOFListItemTitle" />
                    <TextView android:id="@android:attr/persistent" android:text="@string/auto_reply_summary" android:layout_below="@android:attr/hasCode" android:layout_alignLeft="@android:attr/hasCode" style="@style/OOFListItemSummary" />
                </RelativeLayout>
                <CheckBox android:id="@android:attr/enabled" style="@style/OOFCheckBox" />
            </LinearLayout>
            <View style="@style/OOFSeparator" />
            <LinearLayout android:id="@id/replyTo" style="@style/OOFLinearLayout">
                <RelativeLayout android:layout_width="fill_parent" style="@style/OOFRelativeLayout">
                    <TextView android:id="@android:attr/debuggable" android:text="@string/reply_to" style="@style/OOFListItemTitle" />
                    <TextView android:id="@android:attr/exported" android:text="@string/reply_to_summary" android:layout_below="@android:attr/debuggable" android:layout_alignLeft="@android:attr/debuggable" style="@style/OOFListItemSummary" />
                </RelativeLayout>
                <ImageView android:layout_gravity="center_vertical" android:id="@android:attr/process" android:background="@drawable/btn_circle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:src="@drawable/ic_btn_round_more" />
            </LinearLayout>
            <View style="@style/OOFSeparator" />
            <TextView android:id="@android:attr/taskAffinity" android:layout_marginLeft="10.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="6.0dip" android:text="@string/outside_org_summary" style="@style/OOFListItemSummary" />
            <LinearLayout android:id="@id/outsideOrg_msg_container" android:layout_weight="1.0" style="@style/OOFEditLinearLayout">
                <WebView android:id="@id/outsideOrg_msg" android:background="@android:drawable/edit_text" android:focusable="true" android:scrollbars="none" android:fadingEdge="none" android:nextFocusDown="@id/savebutton" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:fillViewport="true" />
            </LinearLayout>
        </LinearLayout>
        <View style="@style/OOFSeparator" />
        <com.motorola.android.widget.ActionBar android:id="@id/buttons_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <Button android:id="@id/savebutton" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/save" />
            <Button android:id="@id/cancelbutton" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cancel" />
        </com.motorola.android.widget.ActionBar>
    </LinearLayout>
</ScrollView>