<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:background="@blur.res:color/msg_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@blur.res:dimen/content_area_left_padding" android:paddingTop="@blur.res:dimen/content_area_top_padding" android:paddingRight="@blur.res:dimen/content_area_right_padding" android:paddingBottom="@blur.res:dimen/content_area_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioGroup android:id="@id/sync_type" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@id/sync_type_auto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_folder_sync_auto_sync_label" />
            <RadioButton android:id="@id/sync_type_manual" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_folder_sync_manual_sync_label" />
        </RadioGroup>
        <LinearLayout android:orientation="vertical" android:id="@id/spinner_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_folder_sync_amount_label" />
            <Spinner android:id="@id/sync_amount_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>